force-app/main/default/objects/Cost_Per_Product__mdt/Cost_Per_Product__mdt.object-meta.xml
<CustomObject>
    <description>Lists the cost per calendar month, ATM fee in other currencies and Card Replacement cost for each product and country</description>
    <label>Costs Per Product</label>
    <pluralLabel>Costs Per Products</pluralLabel>
</CustomObject>