force-app/main/default/objects/Cost_Per_Product__mdt/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <label>Card Replacement Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>