force-app/main/default/objects/Cost_Per_Product__mdt/fields/Cost_Per_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Calendar_Month__c</fullName>
    <label>Cost Per Calendar Month</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>