force-app/main/default/objects/Cost_Per_Product__mdt/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <label>Home Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
                <default>true</default>
                <label>DE</label>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>