force-app/main/default/objects/Cost_Per_Product__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>